--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,13 @@
 buildscript {
   ext {
     // SDK and tools
-    compilesdk_version = 27
-    minsdk_version = 19
-    targetsdk_version = 27
-    supportlibrary_version = '27.1.1'
-    constraintlayout_version = '1.1.0'
-    gradle_version = '3.1.2'
-    kotlin_version = '1.2.41'
+    compilesdk_version = 29
+    minsdk_version = 21
+    targetsdk_version = 29
+    gradle_version = '3.5.2'
+    kotlin_version = '1.3.50'
     anko_version = '0.10.1'
     junit_version = '4.12'
-    espresso_version = '3.0.1'
-    mockito_version = '2.11.0'
     // 3rd party dependencies
     fuel_version = '1.12.0'
   }
@@ -22,7 +18,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.2'
+    classpath "com.android.tools.build:gradle:$gradle_version"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$rootProject.ext.kotlin_version"
 
     // NOTE: Do not place your application dependencies here; they belong
